--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
+body{
+  background-color: #eef6fb;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.mainContainer {
+  display: flex;
+  /* height: 100vh; */
+  flex-direction: column;
+  /* justify-content: space-between; */
+  align-items:center;
+  /* background-color: red; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cities{
+  display: flex;
+  width:50vw;
+  justify-content: space-around;
+  padding:30px 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.weatherContainer{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #eef6fb;
+  width:50vw;
+  height: 65vh;
+  border: 4px solid white;
+  border-radius: 10px;
+  box-shadow: 0px 5px 20px #ccc;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.today{
+  border-bottom: 4px solid white;
+  height: 60%;
 }
