--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+*{
+font-family: 'Montserrat', sans-serif;
+}
+
 body{
   background-color: #eef6fb;
   text-align: center;
@@ -5,11 +9,8 @@ body{
 
 .mainContainer {
   display: flex;
-  /* height: 100vh; */
   flex-direction: column;
-  /* justify-content: space-between; */
   align-items:center;
-  /* background-color: red; */
 }
 
 .cities{
@@ -33,4 +34,16 @@ body{
 .today{
   border-bottom: 4px solid white;
   height: 60%;
+}
+
+button{
+  background-color: #eef6fb;
+  border: none;
+  font-size: 1.5em;
+  font-weight:300;
+}
+.activeButton{
+  color:#64b1e6;
+  font-family: 'Montserrat', sans-serif;
+  font-weight:700;
 }
