--- a/src/App.css
+++ b/src/App.css
@@ -64,20 +64,33 @@ button{
   border: 4px solid white;
   border-radius: 10px;
   border-top: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .inner-container {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+}
+.forecast-day {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.current-weather {
-}
-
 .degrees{
 font-size: 3.5em;
+font-weight: 300;
+font-family: 'Teko', sans-serif;
+}
+
+.degrees-small{
+font-size: 2em;
 font-weight: 300;
 font-family: 'Teko', sans-serif;
 }
@@ -90,4 +103,9 @@ font-family: 'Teko', sans-serif;
   width: 100%;
   height: 100%;
 }
-    
+
+.day {
+	flex: 1;
+	align-self: center;
+	justify-self: center;
+}
