--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 *{
 font-family: 'Montserrat', sans-serif;
+color:#2D2D32;
 }
 
 body{
@@ -15,6 +16,7 @@ body{
 .cities{
   display: flex;
   width:50vw;
+  flex-wrap: wrap;
   justify-content: space-around;
   padding:30px 0;
 }
@@ -22,14 +24,18 @@ body{
 button{
   background-color: #eef6fb;
   border: none;
-  font-size: 1.5em;
-  font-weight:300;
+  font-size: 2vw;
+  font-weight:100;
+}
+
+button:hover{
+  cursor: pointer;
 }
 
 .activeButton{
   color:#64b1e6;
   font-family: 'Montserrat', sans-serif;
-  font-weight:700;
+  font-weight:600;
 }
 
 .weatherContainer{
@@ -38,74 +44,88 @@ button{
   border-radius: 10px;
   box-shadow: 0px 5px 20px #ccc;
   background-color: white;
-  display: grid;
-  grid-template-rows: repeat(5,1fr);
 }
 
 .todayContainer{
-  grid-row: 1/4;
+  height: 60%;
   background-color: #eef6fb;
   border: 4px solid white;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  font-size: 1.5em;
-  font-weight: 100;
+  padding: 20px 0;
 }
 
 .header{
+  text-align: center;
+  font-size: 2vw;
+  font-weight: 100; 
 }
 
-.forecastContainer{
-  grid-row: 4/6;
-  background-color: #eef6fb;
-  border: 4px solid white;
-  border-radius: 10px;
-  border-top: 0;
+.inner-todayContainer {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.inner-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 20px;
-}
-.forecast-day {
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.degrees{
-font-size: 3.5em;
-font-weight: 300;
-font-family: 'Teko', sans-serif;
-}
-
-.degrees-small{
-font-size: 2em;
-font-weight: 300;
-font-family: 'Teko', sans-serif;
+  margin-top: 20px;
+  
 }
 
 .image {
-  width: 8em;
-  height: 8em;
+  width: 15vw;
+  height: 15vw;
 }
 .icon {
   width: 100%;
   height: 100%;
 }
 
-.day {
-	flex: 1;
-	align-self: center;
-	justify-self: center;
+.current-weather{
+  width: 20%;
+  font-size: 2vw;
+  font-weight: 100;
+  display: flex;
+  flex-direction: column;
+}
+
+.degrees{
+  font-size: 3.5em;
+  font-weight: 300;
+  font-family: 'Teko', sans-serif;
+}
+
+.forecastContainer{
+  height: 40%;
+  background-color: white;
+  border: 4px solid white;
+  border-radius: 10px;
+  border-top: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.forecast-dayCard {
+  height: 100%;
+  width: 24.5%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #eef6fb;
+}
+
+.image2 {
+  width: 7vw;
+  height: 7vw;
+}
+.icon2 {
+  width: 100%;
+  height: 100%;
+}
+
+.degrees-small{
+font-size: 2.5vw;
+font-weight: 300;
+font-family: 'Teko', sans-serif;
 }
