--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,7 @@ button:hover{
   border-top: 0;
   display: flex;
   justify-content: space-between;
+  box-shadow: 0px 7px 20px #ccc;
 }
 
 .forecast-dayCard {
