--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,6 @@ button:hover{
   justify-content: center;
   align-items: center;
   margin-top: 20px;
-  
 }
 
 .image {
@@ -103,6 +102,14 @@ button:hover{
   display: flex;
   justify-content: space-between;
   box-shadow: 0px 7px 20px #ccc;
+}
+
+.error{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background-color: #eef6fb;
+  justify-content: center;
 }
 
 .forecast-dayCard {
