--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,8 @@ button:hover{
   height: 60%;
   background-color: #eef6fb;
   border: 4px solid white;
-  border-radius: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -97,7 +98,8 @@ button:hover{
   height: 40%;
   background-color: white;
   border: 4px solid white;
-  border-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   border-top: 0;
   display: flex;
   justify-content: space-between;
@@ -121,6 +123,14 @@ button:hover{
   justify-content: center;
   align-items: center;
   background-color: #eef6fb;
+}
+
+.left {
+  border-bottom-left-radius: 8px;
+}
+
+.right {
+  border-bottom-right-radius: 8px;
 }
 
 .image2 {
